fix(sonar): S6885 — use Math.clamp instead of nested Math.min/max
- AcpClient.waitForPromptResult: replace
  Math.max(1L, Math.min(pollMs, remainingMs)) with
  Math.clamp(remainingMs, 1L, pollMs).
- ExecuteQueryTool.formatResultSet: replace
  Math.max(colWidths[i], Math.min(rowLen, 50)) with
  Math.clamp(rowLen, colWidths[i], 50). Safe because colWidths[i]
  starts at 0 and only grows by min(rowLen, 50), so the invariant
  colWidths[i] <= 50 always holds.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>